data/all_generated_tests/raw_wast_tests/return_InvalidorInconsistentControlFlowGraph_2912.wast
;; **Test 1: Validating Type Mismatch in Stack Operands at Return**  Create a WASM module with a function that pushes different types of operands onto the stack before returning. In one implementation, this should raise a type mismatch error at return due to improper stack unwinding (as per WASM spec). The Wizard Engine should properly detect and raise an error if the stack types don’t match the expected return type, while the WebAssembly implementation should also ensure stack types comply with function signature on return.  _Checks for incorrect CFG management due to unexpected operand types on stack during return._

(assert_invalid
  (module
    (func $validate-type-mismatch-in-stack-operands (result i32)
      (f64.const 3.14)
      (i32.const 42)
      (return)
    )
  )
  "type mismatch"
)